examples/type_system/failing/88_effect_op_signature_argument_mismatch.flx
// E300: effect operation argument mismatch.
// `Console.read` expects `String`, but call passes `Int`.

effect Console {
    read: String -> Int
}

fn main() -> Unit with IO {
    let _ = (perform Console.read(123)) handle Console {
        read(_resume, _msg) -> 0
    }
}
